--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+    <color name="md_theme_light_primary">#36CF93</color>
+    <color name="md_theme_light_onPrimary">#ffffff</color>
+    <color name="md_theme_light_secondary">#72C860</color>
+    <color name="md_theme_light_onSecondary">#ffffff</color>
+    <color name="md_theme_light_primaryContainer">#36CF93</color>
+    <color name="md_theme_light_onPrimaryContainer">#ffffff</color>
+    <color name="md_theme_light_background">#EAEDEF</color>
+    <color name="md_theme_light_onBackground">#000000</color>
+    <color name="md_theme_light_surface">#ffffff</color>
+    <color name="md_theme_light_onSurface">#000000</color>
+    <color name="md_theme_light_tertiary">#638FFF</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+
+    <color name="md_theme_light_distance_data_color">#36CF93</color>
+    <color name="md_theme_light_fuel_amount_data_color">#00E2FD</color>
+    <color name="md_theme_light_payments_data_color">#FFC800</color>
+    <color name="md_theme_light_fuel_price_data_color">#6F6F6F</color>
+
+
 </resources>
