--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.redrive.presentation.LogsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_current_vehicle"
@@ -28,10 +29,10 @@
                 android:layout_height="36dp"
                 android:layout_marginStart="@dimen/margin_regular"
                 android:src="@drawable/ic_car"
-                app:tint="?attr/colorOnPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:tint="?attr/colorOnPrimary"
                 tools:ignore="ContentDescription">
 
             </ImageView>
