--- a/app/src/main/res/layout/fragment_redrive.xml
+++ b/app/src/main/res/layout/fragment_redrive.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundColor"
-    tools:context=".MainActivity">
+    tools:context="com.example.redrive.presentation.RedriveFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_current_vehicle"
@@ -436,10 +435,10 @@
                 android:layout_marginStart="@dimen/margin_regular"
                 android:textAppearance="@style/Redrive.App.TextAppearance.Large"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/view_last_refuel_fuel_amount"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/view_last_refuel_fuel_amount"
-                tools:text="5.29"/>
+                tools:text="5.29" />
 
             <TextView
                 android:id="@+id/tv_last_avg_consumption_unit"
@@ -447,8 +446,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_regular"
                 android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-                app:layout_constraintTop_toBottomOf="@id/tv_last_avg_consumption_value"
                 app:layout_constraintEnd_toEndOf="@id/tv_last_avg_consumption_value"
+                app:layout_constraintTop_toBottomOf="@id/tv_last_avg_consumption_value"
                 tools:text="l/100 km">
 
             </TextView>
@@ -471,7 +470,6 @@
         tools:ignore="ContentDescription">
 
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
