--- a/app/src/main/res/layout/fragment_tabs.xml
+++ b/app/src/main/res/layout/fragment_tabs.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context="com.example.redrive.presentation.tabs.TabsFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tabs_toolbar"
