--- a/app/src/main/res/menu/tabs_menu.xml
+++ b/app/src/main/res/menu/tabs_menu.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/redrive"
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/redrive_graph"
         android:title="@string/redrive"
         android:icon="@drawable/ic_main"
         />
 
-    <item android:id="@+id/logs"
+    <item android:id="@+id/logs_graph"
         android:title="@string/logs"
         android:icon="@drawable/ic_logs"
 
         />
 
-    <item android:id="@+id/profile"
+    <item android:id="@+id/profile_graph"
         android:title="@string/profile"
         android:icon="@drawable/ic_profile"
         />
