--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -1,6 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_graph"
+    app:startDestination="@id/splashFragment">
 
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.example.redrive.presentation.SplashFragment"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splashFragment_to_tabsFragment"
+            app:destination="@id/tabsFragment"
+            app:enterAnim="@anim/from_top_left_to_bottom_right"
+            app:popUpTo="@id/main_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/tabsFragment"
+        android:name="com.example.redrive.presentation.tabs.TabsFragment"
+        tools:layout="@layout/fragment_tabs" >
+        <action
+            android:id="@+id/action_tabsFragment_to_auth_flow"
+            app:destination="@id/auth_flow"
+            app:popUpTo="@id/tabsFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <navigation android:id="@+id/auth_flow"
+        app:startDestination="@id/signInFragment">
+        <fragment
+            android:id="@+id/signInFragment"
+            android:name="com.example.redrive.presentation.SignInFragment"
+            android:label="@string/sign_in"
+            tools:layout="@layout/fragment_sign_in">
+            <action
+                android:id="@+id/action_signInFragment_to_signUpFragment"
+                app:destination="@id/signUpFragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/signUpFragment"
+            android:name="com.example.redrive.presentation.SignUpFragment"
+            android:label="@string/sign_up"
+            tools:layout="@layout/fragment_sign_up" />
+        <action
+            android:id="@+id/action_global_tabsFragment"
+            app:destination="@id/tabsFragment"
+            app:popUpTo="@id/auth_flow"
+            app:popUpToInclusive="true" />
+    </navigation>
 </navigation>
