--- a/app/src/main/res/navigation/tabs_graph.xml
+++ b/app/src/main/res/navigation/tabs_graph.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/tabs_graph">
+    android:id="@+id/tabs_graph"
+    app:startDestination="@id/redrive_graph">
 
+    <include app:graph="@navigation/redrive_graph" />
+    <include app:graph="@navigation/logs_graph" />
+    <include app:graph="@navigation/profile_graph" />
 </navigation>
