--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.redrive.presentation.SignUpFragment">
+    tools:context="com.example.redrive.presentation.auth.signUp.SignUpFragment">
 
     <ImageView
         android:id="@+id/iv_logo"
