--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -13,7 +13,7 @@
             android:id="@+id/action_splashFragment_to_tabsFragment"
             app:destination="@id/tabsFragment"
             app:enterAnim="@anim/from_top_left_to_bottom_right"
-            app:popUpTo="@id/main_graph"
+            app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -23,6 +23,7 @@
         <action
             android:id="@+id/action_tabsFragment_to_auth_flow"
             app:destination="@id/auth_flow"
+            app:enterAnim="@anim/from_top_left_to_bottom_right"
             app:popUpTo="@id/tabsFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -30,16 +31,17 @@
         app:startDestination="@id/signInFragment">
         <fragment
             android:id="@+id/signInFragment"
-            android:name="com.example.redrive.presentation.SignInFragment"
+            android:name="com.example.redrive.presentation.auth.signIn.SignInFragment"
             android:label="@string/sign_in"
             tools:layout="@layout/fragment_sign_in">
             <action
                 android:id="@+id/action_signInFragment_to_signUpFragment"
-                app:destination="@id/signUpFragment" />
+                app:destination="@id/signUpFragment"
+                app:enterAnim="@anim/from_top_left_to_bottom_right" />
         </fragment>
         <fragment
             android:id="@+id/signUpFragment"
-            android:name="com.example.redrive.presentation.SignUpFragment"
+            android:name="com.example.redrive.presentation.auth.signUp.SignUpFragment"
             android:label="@string/sign_up"
             tools:layout="@layout/fragment_sign_up" />
         <action
