(presentation)WIP:Implemented SignIn fragment and SignInViewModel

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -155,7 +155,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btt_sign_up"
-        style="@style/Redrive.App.MaterialButton.Primary"
+        style="@style/Redrive.App.Auth.MaterialButton"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
