--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
         <item name="android:layout_marginStart">24dp</item>
         <item name="android:layout_marginEnd">24dp</item>
         <item name="android:layout_marginTop">16dp</item>
-        <item name="cursorColor">?attr/colorOnPrimary</item>
+        <item name="cursorColor">?attr/colorOnBackground</item>
         <item name="android:textColorHint">#B7B6B6</item>
         <item name="boxStrokeColor">#D7D6D6</item>
         <item name="hintTextColor">?attr/colorTertiary</item>
@@ -93,7 +93,7 @@
 
     <style name="Redrive.App.TextInputEditText.Auth" parent="ThemeOverlay.Material3.TextInputEditText">
         <item name="fontFamily">@font/poppins_light</item>
-        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorOnBackground</item>
         <item name="android:textSize">@dimen/text_size_input</item>
     </style>
 
