WIP:Add independent validation useCase for each SignUp field. Implemented signUp Fragment and ViewModel

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -47,6 +47,7 @@
         <action
             android:id="@+id/action_global_tabsFragment"
             app:destination="@id/tabsFragment"
+            app:enterAnim="@anim/from_top_left_to_bottom_right"
             app:popUpTo="@id/auth_flow"
             app:popUpToInclusive="true" />
     </navigation>
