--- a/app/src/main/res/layout/fragment_redrive.xml
+++ b/app/src/main/res/layout/fragment_redrive.xml
@@ -27,12 +27,11 @@
                 android:id="@+id/iv_vehicle"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="@dimen/margin_medium"
                 android:src="@drawable/ic_car"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.416"
                 app:tint="?attr/colorOnPrimary"
                 tools:ignore="ContentDescription" />
 
@@ -53,7 +52,7 @@
                 android:id="@+id/iv_drop_down_menu"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginEnd="@dimen/margin_medium"
                 android:src="@drawable/ic_arrow_drop_down"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
