--- a/app/src/main/res/navigation/logs_graph.xml
+++ b/app/src/main/res/navigation/logs_graph.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_refuel" />
     <fragment
         android:id="@+id/vehiclesFragment"
-        android:name="com.example.redrive.presentation.VehiclesFragment"
+        android:name="com.example.redrive.presentation.vehicle.VehiclesFragment"
         android:label="@string/vehicles"
         tools:layout="@layout/fragment_vehicles" />
 </navigation>
