Finished vehicle feature

--- a/app/src/main/res/menu/vehicles_more_pop_up_menu.xml
+++ b/app/src/main/res/menu/vehicles_more_pop_up_menu.xml
@@ -11,5 +11,10 @@
         android:title="@string/delete">
 
     </item>
+    <item
+        android:id="@+id/set_as_current"
+        android:title="@string/set_as_current">
+
+    </item>
 
 </menu>
