--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,208 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context="com.example.redrive.presentation.auth.signUp.SignUpFragment">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="65dp"
-        android:src="@drawable/ic_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="?attr/colorOnBackground"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:id="@+id/tv_sign_in"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="165dp"
-        android:text="@string/sign_up_to_redrive"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
-        app:layout_constraintTop_toTopOf="parent" />
+       >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/full_name_container"
-        style="@style/Redrive.App.TextInputLayout.Auth"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/full_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_sign_in">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_full_name"
-            style="@style/Redrive.App.TextInputEditText.Auth"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="65dp"
+            android:src="@drawable/ic_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="?attr/colorOnBackground"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tv_sign_in"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginTop="165dp"
+            android:text="@string/sign_up_to_redrive"
+            android:textAppearance="@style/Redrive.App.TextAppearance.Bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_container"
-        style="@style/Redrive.App.TextInputLayout.Auth"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/full_name_container">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_email"
-            style="@style/Redrive.App.TextInputEditText.Auth"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/full_name_container"
+            style="@style/Redrive.App.TextInputLayout.Auth"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/full_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_sign_in">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_container"
-        style="@style/Redrive.App.TextInputLayout.Auth"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_container"
-        app:passwordToggleEnabled="true">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_full_name"
+                style="@style/Redrive.App.TextInputEditText.Auth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_password"
-            style="@style/Redrive.App.TextInputEditText.Auth"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_container"
+            style="@style/Redrive.App.TextInputLayout.Auth"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/full_name_container">
 
-    <TextView
-        android:id="@+id/tv_password_one_symbol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/one_symbol"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@id/tv_password_upper_lower_case"
-        app:layout_constraintStart_toStartOf="@id/password_container"
-        app:layout_constraintTop_toBottomOf="@id/password_container" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_email"
+                style="@style/Redrive.App.TextInputEditText.Auth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tv_password_upper_lower_case"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/uppercase_and_lowercase_letter"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/password_container"
-        app:layout_constraintStart_toEndOf="@id/tv_password_one_symbol"
-        app:layout_constraintTop_toBottomOf="@id/password_container" />
-
-    <TextView
-        android:id="@+id/tv_password_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/at_least_one_number"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@id/tv_password_length"
-        app:layout_constraintStart_toStartOf="@id/password_container"
-        app:layout_constraintTop_toBottomOf="@id/tv_password_one_symbol" />
-
-    <TextView
-        android:id="@+id/tv_password_length"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_small"
-        android:text="@string/password_length"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/password_container"
-        app:layout_constraintStart_toEndOf="@id/tv_password_number"
-        app:layout_constraintTop_toBottomOf="@id/tv_password_one_symbol" />
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/confirm_password_container"
-        style="@style/Redrive.App.TextInputLayout.Auth"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/confirm_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_password_length"
-        app:passwordToggleEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_confirm_password"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_container"
+            style="@style/Redrive.App.TextInputLayout.Auth"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textAppearance="@style/Redrive.App.TextInputEditText.Auth" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/email_container"
+            app:passwordToggleEnabled="true">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btt_sign_up"
-        style="@style/Redrive.App.Auth.MaterialButton"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/sign_up"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirm_password_container"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_password"
+                style="@style/Redrive.App.TextInputEditText.Auth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:id="@+id/tv_have_account"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:text="@string/already_have_an_account"
-        android:textAppearance="@style/Redrive.App.TextInputEditText.Auth"
-        android:textColor="?attr/colorOnBackground"
-        app:layout_constraintEnd_toStartOf="@id/btt_sign_in"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btt_sign_up"/>
+        <TextView
+            android:id="@+id/tv_password_one_symbol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/one_symbol"
+            android:textAppearance="@style/Redrive.App.TextAppearance.Small"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@id/tv_password_upper_lower_case"
+            app:layout_constraintStart_toStartOf="@id/password_container"
+            app:layout_constraintTop_toBottomOf="@id/password_container" />
 
-    <TextView
-        android:id="@+id/btt_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/poppins_light"
-        android:gravity="center"
-        android:text="@string/sign_in"
-        android:textAppearance="@style/Redrive.App.TextInputEditText.Auth"
-        android:textColor="?attr/colorTertiary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
-        app:layout_constraintTop_toBottomOf="@+id/btt_sign_up"/>
+        <TextView
+            android:id="@+id/tv_password_upper_lower_case"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/uppercase_and_lowercase_letter"
+            android:textAppearance="@style/Redrive.App.TextAppearance.Small"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/password_container"
+            app:layout_constraintStart_toEndOf="@id/tv_password_one_symbol"
+            app:layout_constraintTop_toBottomOf="@id/password_container" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateTint="?attr/colorOnSurface"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+            android:id="@+id/tv_password_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/at_least_one_number"
+            android:textAppearance="@style/Redrive.App.TextAppearance.Small"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@id/tv_password_length"
+            app:layout_constraintStart_toStartOf="@id/password_container"
+            app:layout_constraintTop_toBottomOf="@id/tv_password_one_symbol" />
+
+        <TextView
+            android:id="@+id/tv_password_length"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_small"
+            android:text="@string/password_length"
+            android:textAppearance="@style/Redrive.App.TextAppearance.Small"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/password_container"
+            app:layout_constraintStart_toEndOf="@id/tv_password_number"
+            app:layout_constraintTop_toBottomOf="@id/tv_password_one_symbol" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/confirm_password_container"
+            style="@style/Redrive.App.TextInputLayout.Auth"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/confirm_password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_password_length"
+            app:passwordToggleEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_confirm_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textAppearance="@style/Redrive.App.TextInputEditText.Auth" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btt_sign_up"
+            style="@style/Redrive.App.Auth.MaterialButton"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/sign_up"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/confirm_password_container" />
+
+        <TextView
+            android:id="@+id/tv_have_account"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/already_have_an_account"
+            android:textAppearance="@style/Redrive.App.TextInputEditText.Auth"
+            android:textColor="?attr/colorOnBackground"
+            app:layout_constraintEnd_toStartOf="@id/btt_sign_in"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btt_sign_up" />
+
+        <TextView
+            android:id="@+id/btt_sign_in"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppins_light"
+            android:gravity="center"
+            android:text="@string/sign_in"
+            android:textAppearance="@style/Redrive.App.TextInputEditText.Auth"
+            android:textColor="?attr/colorTertiary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tv_have_account"
+            app:layout_constraintTop_toBottomOf="@+id/btt_sign_up" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="?attr/colorOnSurface"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
