--- a/app/src/main/res/layout/vehicle_item.xml
+++ b/app/src/main/res/layout/vehicle_item.xml
@@ -16,13 +16,27 @@
         android:layout_height="match_parent"
         >
 
+        <ImageView
+            android:id="@+id/iv_is_current"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="@dimen/margin_regular"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"
+            android:src="@drawable/ic_item_current"
+            tools:ignore="ContentDescription">
+
+        </ImageView>
+
 
         <ImageView
             android:id="@+id/iv_vehicle_type"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_margin="@dimen/margin_regular"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_is_current"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_car"
