--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.redrive.presentation.SettingsFragment">
+    tools:context="com.example.redrive.presentation.settings.SettingsFragment">
 
 
     <com.google.android.material.card.MaterialCardView
@@ -25,31 +25,30 @@
             android:orientation="vertical">
 
             <include
-                android:id="@+id/currency"
-                layout="@layout/settings_item">
-            </include>
+                android:id="@+id/item_currency"
+                layout="@layout/item_currency" />
 
             <include
-                android:id="@+id/distance"
-                layout="@layout/settings_item">
-            </include>
+                android:id="@+id/item_distance"
+                layout="@layout/item_distance" />
 
             <include
-                android:id="@+id/capacity"
-                layout="@layout/settings_item">
-            </include>
+                android:id="@+id/item_capacity"
+                layout="@layout/item_capacity" />
 
             <include
-                android:id="@+id/avg_consumption"
-                layout="@layout/settings_item">
-
-            </include>
+                android:id="@+id/item_avg_consumption"
+                layout="@layout/item_avg_consumption" />
 
             <include
-                android:id="@+id/date_format"
-                layout="@layout/settings_item">
+                android:id="@+id/item_date_pattern"
+                layout="@layout/item_date_pattern" />
 
-            </include>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_regular">
+
+            </View>
 
         </LinearLayout>
 
