--- a/app/src/main/res/layout/item_avg_consumption.xml
+++ b/app/src/main/res/layout/item_avg_consumption.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_avg_consumption"
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
@@ -15,34 +16,35 @@
     </androidx.constraintlayout.widget.Guideline>
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_avg_consumption"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:layout_marginTop="@dimen/margin_regular"
         android:gravity="center"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Title.Regular"
+        android:textAppearance="@style/Redrive.App.TextAppearance.Title.Medium"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Name" />
+        android:text="@string/avg_consumption" />
 
     <TextView
-        android:id="@+id/tv_current_unit"
+        android:id="@+id/tv_abbreviation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inter_medium"
-        android:textAppearance="@style/Redrive.App.TextAppearance.Small"
+        android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
         app:layout_constraintStart_toStartOf="@+id/guideline_left"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_avg_consumption"
         tools:text="USD" />
 
     <ImageView
         android:id="@+id/icon"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_current_unit"
+        android:src="@drawable/ic_avg_consumption"
+        app:layout_constraintBottom_toBottomOf="@id/tv_abbreviation"
         app:layout_constraintEnd_toStartOf="@id/guideline_left"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_name" />
+        app:layout_constraintTop_toTopOf="@id/tv_avg_consumption" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
