--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,6 +45,7 @@
     <style name="Redrive.App.TextAppearance.Regular" parent="Redrive.ThemeOverlay.TextAppearance.Base">
         <item name="android:textSize">@dimen/text_size_regular</item>
     </style>
+
     <style name="Redrive.App.TextAppearance.Input" parent="Redrive.ThemeOverlay.TextAppearance.Base">
         <item name="android:textSize">@dimen/text_size_input</item>
     </style>
@@ -58,12 +59,11 @@
     </style>
 
 
-
-
     <style name="Redrive.App.TextAppearance.Title.Regular" parent="Redrive.ThemeOverlay.TextAppearance.Base">
         <item name="android:textSize">@dimen/text_size_regular</item>
         <item name="fontFamily">@font/inter_medium</item>
     </style>
+
     <style name="Redrive.App.TextAppearance.Title.Medium" parent="Redrive.ThemeOverlay.TextAppearance.Base">
         <item name="android:textSize">@dimen/text_size_medium</item>
         <item name="fontFamily">@font/inter_medium</item>
@@ -140,6 +140,16 @@
     <style name="Redrive.App.CardView.Base" parent="">
         <item name="cardCornerRadius">12dp</item>
         <item name="cardBackgroundColor">?attr/colorSurface</item>
+    </style>
+
+    <style name="App.SettingsDialog" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="shapeAppearanceOverlay">@style/RoundedDialogShape</item>
+    </style>
+
+    <style name="RoundedDialogShape" parent="ShapeAppearance.Material3.MediumComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">12dp</item>
+
     </style>
 
 
