Modified some navigation

--- a/app/src/main/res/layout/fragment_logs.xml
+++ b/app/src/main/res/layout/fragment_logs.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.redrive.presentation.LogsFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_current_vehicle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_large"
         android:layout_marginEnd="@dimen/margin_large"
-        app:cardCornerRadius="@dimen/default_card_corner_radius"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardCornerRadius="@dimen/default_card_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,9 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="?attr/colorOnPrimary"
                 tools:ignore="ContentDescription">
-
             </ImageView>
-
 
             <TextView
                 android:id="@+id/tv_current_vehicle_name"
@@ -50,7 +46,6 @@
                 app:layout_constraintStart_toEndOf="@id/iv_vehicle"
                 app:layout_constraintTop_toTopOf="@id/iv_vehicle"
                 tools:text="Car name">
-
 
             </TextView>
 
@@ -72,8 +67,8 @@
     </com.google.android.material.card.MaterialCardView>
 
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,4 +98,4 @@
     </FrameLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
