--- a/app/src/main/res/layout/fragment_new_vehicle.xml
+++ b/app/src/main/res/layout/fragment_new_vehicle.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.redrive.presentation.vehicle.newVehicle.NewVehicleFragment">
-
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/vehicle_card"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginEnd="@dimen/margin_large"
         app:cardBackgroundColor="?attr/colorSurface"
-        app:cardCornerRadius="@dimen/default_card_corner_radius"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:cardCornerRadius="@dimen/default_card_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -43,7 +40,6 @@
                     app:tint="?attr/colorOnPrimary">
 
                 </ImageView>
-
 
             </FrameLayout>
 
@@ -78,11 +74,8 @@
                     android:layout_height="wrap_content"
                     app:icon="@drawable/ic_bike"
                     app:iconGravity="textStart"
-                    app:tint="@color/icon_tint_selector">
-
-                </Button>
+                    app:tint="@color/icon_tint_selector"></Button>
             </com.google.android.material.button.MaterialButtonToggleGroup>
-
 
             <ImageView
                 android:id="@+id/iv_vehicle"
@@ -94,10 +87,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/vehicle_name_container"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/vehicle_name_container"
-                tools:ignore="ContentDescription">
-
-            </ImageView>
-
+                tools:ignore="ContentDescription"></ImageView>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/vehicle_name_container"
@@ -116,7 +106,6 @@
                     android:inputType="text"
                     android:textAppearance="@style/Redrive.App.TextAppearance.Input"
                     tools:text="Vehicle name" />
-
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -151,7 +140,6 @@
                     android:textAppearance="@style/Redrive.App.TextAppearance.Input"
                     tools:text="123 567" />
 
-
             </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -162,16 +150,15 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="@dimen/margin_large"
         android:backgroundTint="@color/btt_background_tint_primary_selector"
         android:text="@string/save"
         android:textAllCaps="true"
         android:textColor="?attr/colorOnPrimaryContainer"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@id/vehicle_card"
-        app:layout_constraintTop_toBottomOf="@id/vehicle_card">
+        android:textSize="16sp">
 
     </Button>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
