--- a/app/src/main/res/navigation/logs_graph.xml
+++ b/app/src/main/res/navigation/logs_graph.xml
@@ -14,17 +14,14 @@
             android:id="@+id/action_logsFragment_to_refuelFragment"
             app:destination="@id/refuelFragment" />
         <action
-            android:id="@+id/action_logsFragment_to_vehiclesFragment"
-            app:destination="@id/vehiclesFragment" />
+            android:id="@+id/action_logsFragment_to_vehicle_flow"
+            app:enterAnim="@anim/from_top_left_to_bottom_right"
+            app:destination="@id/vehicle_flow" />
     </fragment>
     <fragment
         android:id="@+id/refuelFragment"
         android:name="com.example.redrive.presentation.RefuelFragment"
         android:label="@string/refuel"
         tools:layout="@layout/fragment_refuel" />
-    <fragment
-        android:id="@+id/vehiclesFragment"
-        android:name="com.example.redrive.presentation.vehicle.vehicles.VehiclesFragment"
-        android:label="@string/vehicles"
-        tools:layout="@layout/fragment_vehicles" />
+    <include app:graph="@navigation/vehicle_flow" />
 </navigation>
