--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -19,40 +19,11 @@
     <fragment
         android:id="@+id/tabsFragment"
         android:name="com.example.redrive.presentation.tabs.TabsFragment"
-        tools:layout="@layout/fragment_tabs" >
-        <action
-            android:id="@+id/action_tabsFragment_to_auth_flow"
-            app:destination="@id/auth_flow"
-            app:enterAnim="@anim/from_top_left_to_bottom_right"
-            app:popUpTo="@id/tabsFragment"
-            app:popUpToInclusive="true" />
+        tools:layout="@layout/fragment_tabs">
         <argument
             android:name="isUserSignedIn"
-            app:argType="boolean"
-            android:defaultValue="false" />
+            android:defaultValue="false"
+            app:argType="boolean" />
     </fragment>
-    <navigation android:id="@+id/auth_flow"
-        app:startDestination="@id/signInFragment">
-        <fragment
-            android:id="@+id/signInFragment"
-            android:name="com.example.redrive.presentation.auth.signIn.SignInFragment"
-            android:label="@string/sign_in"
-            tools:layout="@layout/fragment_sign_in">
-            <action
-                android:id="@+id/action_signInFragment_to_signUpFragment"
-                app:destination="@id/signUpFragment"
-                app:enterAnim="@anim/from_top_left_to_bottom_right" />
-        </fragment>
-        <fragment
-            android:id="@+id/signUpFragment"
-            android:name="com.example.redrive.presentation.auth.signUp.SignUpFragment"
-            android:label="@string/sign_up"
-            tools:layout="@layout/fragment_sign_up" />
-        <action
-            android:id="@+id/action_global_tabsFragment"
-            app:destination="@id/tabsFragment"
-            app:enterAnim="@anim/from_top_left_to_bottom_right"
-            app:popUpTo="@id/auth_flow"
-            app:popUpToInclusive="true" />
-    </navigation>
+
 </navigation>
