--- a/app/src/main/res/navigation/logs_graph.xml
+++ b/app/src/main/res/navigation/logs_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/logsFragment"
-        android:name="com.example.redrive.presentation.LogsFragment"
+        android:name="com.example.redrive.presentation.logs.LogsFragment"
         android:label="@string/logs"
         tools:layout="@layout/fragment_logs">
         <action
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/refuelFragment"
-        android:name="com.example.redrive.presentation.RefuelFragment"
+        android:name="com.example.redrive.presentation.refuel.RefuelFragment"
         android:label="@string/refuel"
         tools:layout="@layout/fragment_refuel" />
     <include app:graph="@navigation/vehicle_flow" />
